--- a/AnoNovo.html
+++ b/AnoNovo.html
@@ -6,7 +6,7 @@
             body{
                 text-align: center;
                 background-color:greenyellow;
-                padding: 0% 35%;
+                padding: 0% 3rem;
             }
             li{
                 text-align: left !important;
