--- a/UE/Praxes/Catarina.html
+++ b/UE/Praxes/Catarina.html
@@ -8,7 +8,10 @@
     <body>
         <br><br><br><br><br><br>
         <div class ="box">
-       <h1 class="pergunta">Tu es Chata <br>Mas eu adoro-te
-       </h1></div>
+       <!--<h1 class="pergunta">Tu es Chata <br>Mas eu adoro-te
+       </h1>-->
+            <h1>Ja esta conas</h1>
+        
+</div>
         </body>
 </html>
